--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
                 </div>
                 <div class="project">
                     <div class="screenshot">
+                        <a href="http://petr-devaikin.github.io/duma/en/"><img src="img/duma.jpg" alt="Russian State Duma" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://petr-devaikin.github.io/duma/en/">
+                            Russian State Duma
+                        </a>
+                    </div>
+                    <div class="description">
+                        Interactive visualization of the&nbsp;lower house of&nbsp;the&nbsp;Federal Assembly of&nbsp;Russia (parliament) structure.
+                    </div>
+                    <div class="technologies">
+                        Information&nbsp;visualization, HTML, HTML5, SVG, D3.js, JavaScript, CSS
+                    </div>
+                </div>
+                <!--div class="project">
+                    <div class="screenshot">
                         <a href="http://pazzla.qoollo.com"><img src="img/pazzla.jpg" alt="Pazzla" /></a>
                     </div>
                     <div class="title">
@@ -60,7 +76,7 @@
                     <div class="technologies">
                         Instagram, Python, Flask, HTML, HTML5, JavaScript, D3, CSS, SASS, SQLite
                     </div>
-                </div>
+                </div-->
                 <div class="project">
                     <div class="screenshot">
                         <a href="http://petr-devaikin.github.io/hashtagmap/"><img src="img/hashtagmap.jpg" alt="Hashtag Map" /></a>
@@ -91,22 +107,6 @@
                     </div>
                     <div class="technologies">
                         Data&nbsp;visualization, Python, Flask, HTML, HTML5, SVG, JavaScript, RequireJS, CSS, SCSS, PostgreSQL
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="screenshot">
-                        <a href="http://petr-devaikin.github.io/duma/v1/"><img src="img/duma.jpg" alt="Russian Duma Flowchart" /></a>
-                    </div>
-                    <div class="title">
-                        <a href="http://petr-devaikin.github.io/duma/v1/">
-                            Russian Duma Flowchart
-                        </a>
-                    </div>
-                    <div class="description">
-                        Interactive visualization of the Russian Parliament structure from 1993. Users can observe the history of&nbsp;a&nbsp;concrete party or&nbsp;a&nbsp;deputy by&nbsp;clicking on&nbsp;the list on&nbsp;the bottom, the list on&nbsp;the right or&nbsp;the diagram components.
-                    </div>
-                    <div class="technologies">
-                        Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, CSS
                     </div>
                 </div>
                 <div class="project">
