--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         Processing
                     </div>
                 </div>
-                <!--div class="project">
+                <div class="project">
                     <div class="screenshot">
                         <a href="http://petr-devaikin.github.io/duma/en/"><img src="img/duma.jpg" alt="Russian State Duma" /></a>
                     </div>
