--- a/duma/index.html
+++ b/duma/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="дума,рф,россия,парламент,визуализация,duma,russia,parlament,infovis">
         <meta name="author" content="Petr Devaikin">
 
-        <meta property="og:title" content="Государственная Дема России" />
+        <meta property="og:title" content="Государственная Дума России" />
         <meta property="og:description" content="Визуализация состава Государственной Думы Федерального Собрания Российской Федерации" />
         <meta property="og:url" content="http://petr-devaikin.github.io/duma/" />
         <meta property="og:image" content="http://petr-devaikin.github.io/duma/screen.jpg" />
