--- a/duma/en/index.html
+++ b/duma/en/index.html
@@ -9,6 +9,7 @@
         <meta name="author" content="Petr Devaikin">
 
         <meta property="og:title" content="Russian State Duma" />
+        <meta property="og:type" content="website" />
         <meta property="og:description" content="Visualization of the lower house of the Federal Assembly of Russia (parliament) structure" />
         <meta property="og:url" content="http://petr-devaikin.github.io/duma/en/" />
         <meta property="og:image" content="http://petr-devaikin.github.io/duma/screen.jpg" />
