--- a/duma/index.html
+++ b/duma/index.html
@@ -9,6 +9,7 @@
         <meta name="author" content="Petr Devaikin">
 
         <meta property="og:title" content="Государственная Дума России" />
+        <meta property="og:type" content="website" />
         <meta property="og:description" content="Визуализация состава Государственной Думы Федерального Собрания Российской Федерации" />
         <meta property="og:url" content="http://petr-devaikin.github.io/duma/" />
         <meta property="og:image" content="http://petr-devaikin.github.io/duma/screen.jpg" />
