--- a/duma/en/index.html
+++ b/duma/en/index.html
@@ -8,6 +8,9 @@
         <meta name="keywords" content="duma,russia,parlament,infovis,дума,рф,россия,парламент,визуализация">
         <meta name="author" content="Petr Devaikin">
 
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@devaikin" />
+
         <meta property="og:title" content="Russian State Duma" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Visualization of the lower house of the Federal Assembly of Russia (parliament) structure" />
