--- a/duma/index.html
+++ b/duma/index.html
@@ -8,6 +8,9 @@
         <meta name="keywords" content="дума,рф,россия,парламент,визуализация,duma,russia,parlament,infovis">
         <meta name="author" content="Petr Devaikin">
 
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@devaikin" />
+
         <meta property="og:title" content="Государственная Дума России" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Визуализация состава Государственной Думы Федерального Собрания Российской Федерации" />
