--- a/duma/index.html
+++ b/duma/index.html
@@ -10,6 +10,7 @@
 
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@devaikin" />
+        <meta name="twitter:creator" content="@devaikin" />
 
         <meta property="og:title" content="Государственная Дума России" />
         <meta property="og:type" content="website" />
