--- a/duma/index.html
+++ b/duma/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="дума,рф,россия,парламент,визуализация,duma,russia,parlament,infovis">
         <meta name="author" content="Petr Devaikin">
 
-        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@devaikin" />
         <meta name="twitter:creator" content="@devaikin" />
 
