--- a/duma/en/index.html
+++ b/duma/en/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <meta name="description" content="Visualization of the lower house of the Federal Assembly of Russia (parliament) structure">
-        <meta name="keywords" content="duma,russia,parlament,infovis,дума,рф,россия,парламент,визуализация">
+        <meta name="keywords" content="duma,russia,parliament,infovis,дума,рф,россия,парламент,визуализация">
         <meta name="author" content="Petr Devaikin">
 
         <meta name="twitter:card" content="summary_large_image" />
