--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="content">
-            <div class="card">
+            <div class="card card--empty">
                 <div class="card__main card__main--impty">
                     <h1>Information Visualization</h1>
                 </div>
