--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Petr Devaikin</title>
+        <title>Information Visualization | Petr Devaikin</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,160 +10,183 @@
     </head>
     <body>
         <div class="content">
-            <div class="card card--empty">
-                <div class="card__main card__main--impty">
-                    <h1>Information Visualization</h1>
+            <div class="content__inner">
+                <div class="card card--empty">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main">
+                            <h1>Information Visualization</h1>
+                        </div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">Petr Devaikin</h3>
+                            <ul class="card__inner__desc__text">
+                                <li>
+                                    <a href="mailto:p.devaikin@gmail.com">p.devaikin@gmail.com</a>
+                                </li>
+                                <li>
+                                    <a href="http://ru.linkedin.com/pub/petr-devaikin/81/827/45">LinkedIn</a>
+                                </li>
+                                <li>
+                                    <a href="cv_devaikin.pdf">CV</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="card__desc">
-                    <h3 class="card__desc__header">Petr Devaikin</h3>
-                    <ul class="card__desc__text">
-                        <li>
-                            <a href="mailto:p.devaikin@gmail.com">p.devaikin@gmail.com</a>
-                        </li>
-                        <li>
-                            <a href="http://ru.linkedin.com/pub/petr-devaikin/81/827/45">LinkedIn</a>
-                        </li>
-                        <li>
-                            <a href="cv_devaikin.pdf">CV</a>
-                        </li>
-                    </ul>
-                </div>
+
+                <a href="movement/" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/movement.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">Æ-movement</h3>
+                            <p class="card__inner__desc__text">
+                                Real-time visualization of body performance created to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
+                            </p>
+                            <div class="card__inner__desc__date">February 2016</div>
+                            <div class="card__inner__desc__supp">
+                                Processing
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="http://petr-devaikin.github.io/duma/en/" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/duma.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">Russian State Duma</h3>
+                            <p class="card__inner__desc__text">
+                                Interactive visualization of the&nbsp;lower house of&nbsp;the&nbsp;Federal Assembly of&nbsp;Russia (parliament) structure.
+                            </p>
+                            <div class="card__inner__desc__date">September 2016</div>
+                            <div class="card__inner__desc__supp">
+                                HTML, HTML5, SVG, D3.js, JavaScript, CSS
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="hashtagmap/" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/hashtagmap.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">Hashtag Map</h3>
+                            <p class="card__inner__desc__text">
+                                Visual representation of one day in a big city: Moscow, Berlin, Saint&nbsp;Petersburg and London.
+                            </p>
+                            <div class="card__inner__desc__date">September 2014</div>
+                            <div class="card__inner__desc__supp">
+                                Instagram, Python, Flask, HTML, HTML5, Canvas, JavaScript, CSS, MySql
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="http://iseehue.herokuapp.com" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/iseehue.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">I See Hue</h3>
+                            <p class="card__inner__desc__text">
+                                Color perception diagram. Test and visualization.
+                            </p>
+                            <div class="card__inner__desc__date">October 2014</div>
+                            <div class="card__inner__desc__supp">
+                                Python, Flask, HTML, HTML5, SVG, JavaScript, RequireJS, CSS, SCSS, PostgreSQL
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="katz/eng/" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/katz1.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">Max Katz Crowdfunding People</h3>
+                            <p class="card__inner__desc__text">
+                                Visualization of the Maxim Katz crowdfunding campaign in&nbsp;2014: age, gender and transaction amount of&nbsp;contributors.
+                            </p>
+                            <div class="card__inner__desc__date">September 2014</div>
+                            <div class="card__inner__desc__supp">
+                                HTML, HTML5, SVG, JavaScript, D3, CSS
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="katz/eng/timeline/" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/katz2.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">Max Katz Crowdfunding Timeline</h3>
+                            <p class="card__inner__desc__text">
+                                Timeline of the Maxim Katz crowdfunding campaign in&nbsp;2014.
+                            </p>
+                            <div class="card__inner__desc__date">September 2014</div>
+                            <div class="card__inner__desc__supp">
+                                HTML, HTML5, SVG, JavaScript, D3, CSS
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                    <!--div class="project">
+                        <div class="screenshot">
+                            <a href="http://pazzla.qoollo.com"><img src="img/pazzla.jpg" alt="Pazzla" /></a>
+                        </div>
+                        <div class="title">
+                            <a href="http://pazzla.qoollo.com">
+                                Pazzla
+                            </a>
+                        </div>
+                        <div class="description">
+                            Service to make a photo mosaic of Instagram pictures.
+                        </div>
+                        <div class="technologies">
+                            Instagram, Python, Flask, HTML, HTML5, JavaScript, D3, CSS, SASS, SQLite
+                        </div>
+                    </div-->
+                    <!--div class="project">
+                        <div class="screenshot">
+                            <a href="http://petr-devaikin.github.io/metro/"><img src="img/metro.jpg" alt="Moscow Metro Growth Map" /></a>
+                        </div>
+                        <div class="title">
+                            <a href="http://petr-devaikin.github.io/metro/">
+                                Moscow Metro Growth Map
+                            </a>
+                        </div>
+                        <div class="description">
+                            The map shows how Moscow metro was developed from 1937 to&nbsp;2014. To&nbsp;show the age of&nbsp;stations the heatmap color coding is&nbsp;used. Circles with different brightness around stations show the time to&nbsp;achieve a&nbsp;station by&nbsp;walking.
+                        </div>
+                        <div class="technologies">
+                            Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
+                        </div>
+                    </div-->
+                    <!--div class="project">
+                        <div class="screenshot">
+                            <a href="http://поигратьсясошрифтиками.рф"><img src="img/font.jpg" alt="поигратьсясошрифтиками.рф" /></a>
+                        </div>
+                        <div class="title">
+                            <a href="http://поигратьсясошрифтиками.рф/">
+                                поигратьсясошрифтиками.рф
+                            </a>
+                        </div>
+                        <div class="description">
+                            The tool is&nbsp;developed for designers who are tired of&nbsp;customers&rsquo; requests to&nbsp;change the font.
+                        </div>
+                        <div class="technologies">
+                            Python, Flask, HTML, CSS
+                        </div>
+                    </div-->
+
+                <div class="content__inner__copy">&copy; 2016</div>
             </div>
-
-            <a href="movement/" class="card">
-                <div class="card__main" style="background-image: url('img/movement.jpg')"></div>
-                <div class="card__desc">
-                    <h3 class="card__desc__header">Æ-movement</h3>
-                    <p class="card__desc__text">
-                        Real-time visualization of body performance created to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
-                    </p>
-                    <div class="card__desc__date">February 2016</div>
-                    <div class="card__desc__supp">
-                        Processing
-                    </div>
-                </div>
-            </a>
-
-            <a href="http://petr-devaikin.github.io/duma/en/" class="card">
-                <div class="card__main" style="background-image: url('img/duma.jpg')"></div>
-                <div class="card__desc">
-                    <h3 class="card__desc__header">Russian State Duma</h3>
-                    <p class="card__desc__text">
-                        Interactive visualization of the&nbsp;lower house of&nbsp;the&nbsp;Federal Assembly of&nbsp;Russia (parliament) structure.
-                    </p>
-                    <div class="card__desc__date">September 2016</div>
-                    <div class="card__desc__supp">
-                        HTML, HTML5, SVG, D3.js, JavaScript, CSS
-                    </div>
-                </div>
-            </a>
-
-            <a href="hashtagmap/" class="card">
-                <div class="card__main" style="background-image: url('img/hashtagmap.jpg')"></div>
-                <div class="card__desc">
-                    <h3 class="card__desc__header">Hashtag Map</h3>
-                    <p class="card__desc__text">
-                        Visual representation of one day in a big city: Moscow, Berlin, Saint&nbsp;Petersburg and London.
-                    </p>
-                    <div class="card__desc__date">September 2014</div>
-                    <div class="card__desc__supp">
-                        Instagram, Python, Flask, HTML, HTML5, Canvas, JavaScript, CSS, MySql
-                    </div>
-                </div>
-            </a>
-
-            <a href="http://iseehue.herokuapp.com" class="card">
-                <div class="card__main" style="background-image: url('img/iseehue.jpg')"></div>
-                <div class="card__desc">
-                    <h3 class="card__desc__header">I See Hue</h3>
-                    <p class="card__desc__text">
-                        Color perception diagram. Test and visualization.
-                    </p>
-                    <div class="card__desc__date">October 2014</div>
-                    <div class="card__desc__supp">
-                        Python, Flask, HTML, HTML5, SVG, JavaScript, RequireJS, CSS, SCSS, PostgreSQL
-                    </div>
-                </div>
-            </a>
-
-            <a href="katz/eng/" class="card">
-                <div class="card__main" style="background-image: url('img/katz1.jpg')"></div>
-                <div class="card__desc">
-                    <h3 class="card__desc__header">Max Katz Crowdfunding People</h3>
-                    <p class="card__desc__text">
-                        Visualization of the Maxim Katz crowdfunding campaign in&nbsp;2014: age, gender and transaction amount of&nbsp;contributors.
-                    </p>
-                    <div class="card__desc__date">September 2014</div>
-                    <div class="card__desc__supp">
-                        HTML, HTML5, SVG, JavaScript, D3, CSS
-                    </div>
-                </div>
-            </a>
-
-            <a href="katz/eng/timeline/" class="card">
-                <div class="card__main" style="background-image: url('img/katz2.jpg')"></div>
-                <div class="card__desc">
-                    <h3 class="card__desc__header">Max Katz Crowdfunding Timeline</h3>
-                    <p class="card__desc__text">
-                        Timeline of the Maxim Katz crowdfunding campaign in&nbsp;2014.
-                    </p>
-                    <div class="card__desc__date">September 2014</div>
-                    <div class="card__desc__supp">
-                        HTML, HTML5, SVG, JavaScript, D3, CSS
-                    </div>
-                </div>
-            </a>
-
-                <!--div class="project">
-                    <div class="screenshot">
-                        <a href="http://pazzla.qoollo.com"><img src="img/pazzla.jpg" alt="Pazzla" /></a>
-                    </div>
-                    <div class="title">
-                        <a href="http://pazzla.qoollo.com">
-                            Pazzla
-                        </a>
-                    </div>
-                    <div class="description">
-                        Service to make a photo mosaic of Instagram pictures.
-                    </div>
-                    <div class="technologies">
-                        Instagram, Python, Flask, HTML, HTML5, JavaScript, D3, CSS, SASS, SQLite
-                    </div>
-                </div-->
-                <!--div class="project">
-                    <div class="screenshot">
-                        <a href="http://petr-devaikin.github.io/metro/"><img src="img/metro.jpg" alt="Moscow Metro Growth Map" /></a>
-                    </div>
-                    <div class="title">
-                        <a href="http://petr-devaikin.github.io/metro/">
-                            Moscow Metro Growth Map
-                        </a>
-                    </div>
-                    <div class="description">
-                        The map shows how Moscow metro was developed from 1937 to&nbsp;2014. To&nbsp;show the age of&nbsp;stations the heatmap color coding is&nbsp;used. Circles with different brightness around stations show the time to&nbsp;achieve a&nbsp;station by&nbsp;walking.
-                    </div>
-                    <div class="technologies">
-                        Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
-                    </div>
-                </div-->
-                <!--div class="project">
-                    <div class="screenshot">
-                        <a href="http://поигратьсясошрифтиками.рф"><img src="img/font.jpg" alt="поигратьсясошрифтиками.рф" /></a>
-                    </div>
-                    <div class="title">
-                        <a href="http://поигратьсясошрифтиками.рф/">
-                            поигратьсясошрифтиками.рф
-                        </a>
-                    </div>
-                    <div class="description">
-                        The tool is&nbsp;developed for designers who are tired of&nbsp;customers&rsquo; requests to&nbsp;change the font.
-                    </div>
-                    <div class="technologies">
-                        Python, Flask, HTML, CSS
-                    </div>
-                </div-->
-
-            <div class="content__copy">&copy; 2016</div>
         </div>
 
 
