--- a/duma/en/index.html
+++ b/duma/en/index.html
@@ -15,8 +15,8 @@
         <meta property="og:title" content="Russian State Duma" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Visualization of the lower house of the Federal Assembly of Russia (parliament) structure" />
-        <meta property="og:url" content="http://petr-devaikin.github.io/duma/en/" />
-        <meta property="og:image" content="http://petr-devaikin.github.io/duma/screen.jpg" />
+        <meta property="og:url" content="http://petrdevaikin.com/duma/en/" />
+        <meta property="og:image" content="http://petrdevaikin.com/duma/screen.jpg" />
 
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../style.css">
@@ -70,7 +70,7 @@
             </div>
 
             <div id="footer">
-                &copy; 2016 <a href="http://petr-devaikin.github.io">Petr Devaikin</a> |
+                &copy; 2016 <a href="http://petrdevaikin.com">Petr Devaikin</a> |
                 Data from <a href="http://duma.gov.ru">duma.gov.ru</a> |
                 <a href="../">RU</a>
             </div>
