--- a/duma/index.html
+++ b/duma/index.html
@@ -15,8 +15,8 @@
         <meta property="og:title" content="Государственная Дума России" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Визуализация состава Государственной Думы Федерального Собрания Российской Федерации" />
-        <meta property="og:url" content="http://petr-devaikin.github.io/duma/" />
-        <meta property="og:image" content="http://petr-devaikin.github.io/duma/screen.jpg" />
+        <meta property="og:url" content="http://petrdevaikin.com/duma/" />
+        <meta property="og:image" content="http://petrdevaikin.com/duma/screen.jpg" />
 
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -70,7 +70,7 @@
             </div>
 
             <div id="footer">
-                &copy; 2016 <a href="http://petr-devaikin.github.io">Пётр Девайкин</a> |
+                &copy; 2016 <a href="http://petrdevaikin.com">Пётр Девайкин</a> |
                 Данные <a href="http://duma.gov.ru">duma.gov.ru</a> |
                 <a href="en/">EN</a>
             </div>
