--- a/hashtagmap/index.html
+++ b/hashtagmap/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
 
         <meta property="og:title" content="Hashtag Map of London" />
-        <meta property="og:url" content="http://petr-devaikin.github.io/hashtagmap/" />
-        <meta property="og:image" content="http://petr-devaikin.github.io/hashtagmap/london.png" />
+        <meta property="og:url" content="http://petrdevaikin.com/hashtagmap/" />
+        <meta property="og:image" content="http://petrdevaikin.com/hashtagmap/london.png" />
     </head>
     <body>
         <!--div id="fb-root"></div>
@@ -50,7 +50,7 @@
         </div>
 
         <div id="copy">
-            &copy; 2014 <a href="http://petr-devaikin.github.io">Petr Devaikin<a/>
+            &copy; 2014 <a href="http://petrdevaikin.com">Petr Devaikin<a/>
         </div>
 
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA643Zu98kCiNjm3a7NcE0bt3qmL6fHv2c&sensor=false"></script>
