--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </a>
 
-                <a href="http://petr-devaikin.github.io/duma/en/" class="card">
+                <a href="duma/en/" class="card">
                     <div class="card__inner">
                         <div class="card__inner__expander"></div>
                         <div class="card__inner__main" style="background-image: url('img/duma.jpg')"></div>
