--- a/movement/index.html
+++ b/movement/index.html
@@ -87,7 +87,7 @@
                 <div>
                     <h2>Created by</h2>
                     <ul>
-                        <li><a href="http://petr-devaikin.github.io/">Petr Devaikin</a></li>
+                        <li><a href="http://petrdevaikin.com/">Petr Devaikin</a></li>
                         <li>Iva Karabatić</li>
                         <li>Kevin Perez</li>
                     </ul>
