--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Information Visualization | Petr Devaikin</title>
+        <title>Information visualization, UX and Interaction Design | Petr Devaikin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
