--- a/movement/index.html
+++ b/movement/index.html
@@ -40,11 +40,11 @@
 
         <div class="page" id="page_3" bg="bg3">
             <div class="page__inner">
-                <h2>Working Principle</h2>
+                <h2>Pipeline</h2>
                 <ul>
                     <li>
                         <h3>Capture the Movement</h3>
-                        <p>Accelerometer and gyroscope data is collected by a mobile phone attached to a participant's ankle or wrist.</p>
+                        <p>Accelerometer and gyroscope data is collected by a mobile phone attached to a participant's ankle or a wrist.</p>
                     </li>
                     <li>
                         <h3>Analyse the Data</h3>
