--- a/index.html
+++ b/index.html
@@ -89,6 +89,24 @@
                     </div>
                 </a>
 
+                <a href="https://www.youtube.com/watch?v=RNfj8bh07TU" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/destruction.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">Beauty of Destruction</h3>
+                            <p class="card__inner__desc__text">
+                                VR Game for Artificial Rome open studio event.
+                            </p>
+                            <div class="card__inner__desc__tag">VR</div>
+                            <div class="card__inner__desc__date">June 2016</div>
+                            <div class="card__inner__desc__supp">
+                                Unity3d
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="lobster/" class="card">
                     <div class="card__inner">
                         <div class="card__inner__expander"></div>
