--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             </h1>
                         </div>
                         <div class="card__inner__desc">
-                            <h3 class="card__inner__desc__header">Information visualization, UX and Interaction Design</h3>
+                            <h3 class="card__inner__desc__header">Information Visualization, UX and Interaction Design</h3>
                             <ul class="card__inner__desc__text">
                                 <li>
                                     <a href="mailto:p.devaikin@gmail.com">p.devaikin@gmail.com</a>
