--- a/ar/index.html
+++ b/ar/index.html
@@ -20,7 +20,7 @@
                     <h1 class="header__name">Augmented Reality Furniture Catalogue</h1>
                     <p class="header__description">
                         Together with <a href="http://www.matteolever.com/">Matteo Lever</a>
-                        we designed and implemented a prototype of an augmented reality furniture catalogue for<br/> Augmented Reality and Tangible Interfaces course at Paris-Sud University. All items in the magazine are presented with sticky markers. Users can use their mobile phones
+                        we designed and implemented a prototype of an augmented reality furniture catalogue for Augmented Reality and Tangible Interfaces course at Paris-Sud University. All items in the magazine are presented with sticky markers. Users can use their mobile phones
                         to interact with 3d models of furniture.
                     </p>
                 </div>
